# SaveHub_Supabase

./: .gitignore  00_参考对象.md  AGENTS.md  CLAUDE.md  Embedding覆盖率.sql  README.md  RSS_AUTO_REFRESH_EXPLAINED.md  RSS_SUBSCRIPTION_DATA_FLOW.md  SaveHub：你的开源宝藏发掘神器_无监督学习队_PPT.pptx  langchain语义分块.md  next.config.mjs  package.json  pgvector_multimodal_rag.md  pnpm-lock.yaml
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: dependencies.py  exception_handlers.py  exceptions.py  main.py  supabase_client.py
backend/scripts/: 001_create_tables.sql  003_add_user_authentication.sql  005_add_folder_name_unique_constraint.sql  008_add_feed_status_tracking.sql  012_fix_settings_trigger_rls.sql  013_fix_settings_trigger_bypass_rls.sql  014_fix_feeds_url_unique_constraint.sql  015_enable_pgvector.sql  016_add_embedding_config.sql  017_create_api_configs.sql  018_create_article_images_storage.sql  019_make_article_images_public.sql  020_create_article_embeddings.sql  021_add_github_token_to_settings.sql  022_create_repositories_table.sql  023_add_readme_content.sql  024_add_repository_ai_fields.sql  025_add_github_pushed_at.sql  026_create_article_repositories.sql  027_add_repository_source_flags.sql  028_add_repos_extracted_status.sql  029_rename_article_embeddings_to_all_embeddings.sql  030_add_repository_openrank.sql  031_add_repository_embeddings.sql  032_fix_all_embeddings_article_id_nullable.sql  033_update_search_all_embeddings.sql  034_update_search_embeddings_for_references.sql  035_add_agentic_rag_settings_columns.sql  CLAUDE.md  (+3 more)
(+432 files in other folders)
