[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A FastAPI backend for my chatbot"
authors = ["Ojas Kapre <ojasskapre@gmail.com>", "Sarvesh Kapre <sarveshkapre@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = "2.12.5"
fastapi = "0.115.12"
uvicorn = "0.34.0"
langchain = "1.2.6"
openai = "2.15.0"
httpx = "0.28.1"
langchain-openai = "1.1.7"
langchain-community = "0.4.1"
python-dotenv = "1.1.0"
supabase = "2.27.2"
langgraph = "1.0.6"
# SQLAlchemy 已移除 - 使用 Supabase Python SDK

[tool.poetry.group.dev.dependencies]
fastapi = "0.115.12"
uvicorn = "0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
